--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Usuario/Edit.cshtml
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Usuario/Edit.cshtml
@@ -36,7 +36,7 @@
                             </div>
                             <div class="form-group col-md-4">
                                 <label asp-for="UsuarioModel.DataNascimento" class="control-label"></label>
-                                <input asp-for="UsuarioModel.DataNascimento" class="form-control" />
+                                <input type="date" asp-for="UsuarioModel.DataNascimento" class="form-control" />
                                 <span asp-validation-for="UsuarioModel.DataNascimento" class="text-danger"></span>
                             </div>
                         </div>
